Github Integration, creation of empty projects in github based on jeepyb mirroring
Change-Id: I35a7d1776b87adc6848fcf8ce57b091adcd88bf0

--- a/puppet/modules/runtime_project/templates/gerrit/config/production/review.projects.yaml.erb
+++ b/puppet/modules/runtime_project/templates/gerrit/config/production/review.projects.yaml.erb
@@ -5,6 +5,7 @@
   gerrit-user: <%= script_user %>
   gerrit-committer: gerrit2 <gerrit2@localhost.com>
   gerrit-key: <%= script_key_file %>
+  github-config: /etc/github/github-projects.secure.config
   has-wiki: False
   has-issues: False
   has-pull-requests: False
