--- a/puppet/modules/jenkins_config/templates/jenkins.vhost.erb
+++ b/puppet/modules/jenkins_config/templates/jenkins.vhost.erb
@@ -52,6 +52,10 @@
 
              RewriteRule /zuul/status http://127.0.0.1:8001/status [P]
 
-             ProxyPass / http://127.0.0.1:8080/ retry=0
-             ProxyPassReverse / http://127.0.0.1:8080/
+             ProxyPass         / http://127.0.0.1:8080/ nocanon
+             ProxyPassReverse  / http://127.0.0.1:8080/
+             ProxyPassReverse  / https://<%= scope.lookupvar("::jenkins_config::master::vhost_name") %>/
+             AllowEncodedSlashes NoDecode
+             RequestHeader set X-Forwarded-Proto "https"
+             RequestHeader set X-Forwarded-Port "443"
 </VirtualHost>
