gerrit config support proxy settings behind a firewall for auth.
Change-Id: I9383224bbfd0420b82216eaf1cb41b35ac3835bb

--- a/puppet/modules/gerrit_config/templates/gerrit.config.erb
+++ b/puppet/modules/gerrit_config/templates/gerrit.config.erb
@@ -87,6 +87,10 @@
 <% if httpd_maxthreads != "" -%>
 	maxThreads = <%= httpd_maxthreads %>
 <% end -%>
+<% if  scope.lookupvar('http_proxy') != "" -%>
+[http]
+  proxy = <%= scope.lookupvar('http_proxy') %>
+<% end -%>
 [cache]
 	directory = cache
 [cache "web_sessions"]
