Adding validation for http param into the gerrit.config
Change-Id: Ied936647f7fcf8429d01f5d8d541fde938bbabad

--- a/puppet/modules/gerrit_config/templates/gerrit.config.erb
+++ b/puppet/modules/gerrit_config/templates/gerrit.config.erb
@@ -87,9 +87,9 @@
 <% if httpd_maxthreads != "" -%>
 	maxThreads = <%= httpd_maxthreads %>
 <% end -%>
-<% if  scope.lookupvar('http_proxy') != "" -%>
+<% if  scope.lookupvar('http_proxy') != "" and scope.lookupvar('http_proxy') != "undefined" and scope.lookupvar('http_proxy') != :undefined-%>
 [http]
-  proxy = <%= scope.lookupvar('http_proxy') %>
+	proxy = <%= scope.lookupvar('http_proxy') %>
 <% end -%>
 [cache]
 	directory = cache
