--- a/puppet/modules/runtime_project/templates/jenkins_job_builder/config/zuul-layout.yaml.erb
+++ b/puppet/modules/runtime_project/templates/jenkins_job_builder/config/zuul-layout.yaml.erb
@@ -17,4 +17,7 @@
           [ -d zuul ] || git clone https://review.openstack.org/p/openstack-infra/zuul --depth 1
           cp /etc/zuul/openstack_functions.py $WORKSPACE/modules/runtime_project/files/zuul/config/production/openstack_functions.py
           cd zuul
+          #Per issues with the proxy we need to send python package (sphinxcontrib-blockdiag>=0.5.5) at the end of the installation.
+          sed -i '/sphinxcontrib-blockdiag>=0.5.5/d' test-requirements.txt
+          sed -i -e "\$asphinxcontrib-blockdiag>=0.5.5" test-requirements.txt
           tox -e venv -- zuul-server -c etc/zuul.conf-sample -l $WORKSPACE/modules/runtime_project/files/zuul/config/production/layout.yaml -t
