User story #168: gerrit ls-projects grep should match the whole line and not just the pattern
Adding grep -x option to match the whole line, if you already had a project named abc, you coudnt create
another one called abcx

Change-Id: I3619963b104f33688b42e4f3fe3b0590d3e73217

--- a/puppet/modules/runtime_project/templates/gerrit/newproject.sh.erb
+++ b/puppet/modules/runtime_project/templates/gerrit/newproject.sh.erb
@@ -36,7 +36,7 @@ then
   exit 1
 fi
 
-if ($_SSH_CMD gerrit ls-projects | grep $_NEW_PROJECT_NAME) then
+if ($_SSH_CMD gerrit ls-projects | grep -x $_NEW_PROJECT_NAME) then
   echo 'The project already exists, choose another name.'
   exit 1
 fi
