changed tutorial repo to the forj one added .git
Change-Id: I6f339e059622623b614dff09e5d74c6b8eed631f

--- a/puppet/modules/runtime_project/templates/gerrit/config/production/review.projects.yaml.erb
+++ b/puppet/modules/runtime_project/templates/gerrit/config/production/review.projects.yaml.erb
@@ -18,4 +18,4 @@
   description: Sample hello-world project
 - project: tutorials
   description: python sample
-  upstream: https://github.com/ingenierouga/tutorials.git
+  upstream: https://github.com/forj/tutorials.git
