upgrade zuul and gaerman to latest openstack stable version.
Change-Id: Iffbfebe0f480ee0dafe334f0f88f700819c587e1

--- a/puppet/modules/runtime_project/templates/jenkins_job_builder/config/flake8.yaml.erb
+++ b/puppet/modules/runtime_project/templates/jenkins_job_builder/config/flake8.yaml.erb
@@ -8,7 +8,7 @@
 
    scm:
     - git:
-       url: 'ssh://<%= scope.lookupvar("::cdk_project::jenkins::gerrit_user") %>@<%= scope.lookupvar("::cdk_project::jenkins::gerrit_server") %>:<%= scope.lookupvar("::cdk_project::jenkins::gerrit_port") %>/{git_project}'
+       url: '/var/lib/zuul/git/{git_project}'
        branches:
         - '${{ZUUL_COMMIT}}'
        refspec: '${{ZUUL_REF}}'
