--- a/puppet/modules/runtime_project/templates/status/common.js.erb
+++ b/puppet/modules/runtime_project/templates/status/common.js.erb
@@ -25,7 +25,7 @@ function header(activeTabName) {
   document.write(
    '<div id="header" class="container">'+
    '<div class="span-5">'+
-   ' <h1 id="logo"><a href="<%= scope.lookupvar("cdk_project::status::static_url") %>/">Open Stack</a></h1>'+
+   ' <h1><a href="<%= scope.lookupvar("cdk_project::status::static_url") %>/"><img src="title.png" style="padding-bottom: 10px; margin-left: 10px;"/></a></h1>'+
    '</div>\n'+
    '<div class="span-19 last blueLine">'+
    '<div id="navigation" class="span-19">'+
