Changin the url on the jenkins jobs templates
- This is to clone the repos from http zuul url, instead of locally path, because is main needed when
  you enable nodepool.

Change-Id: If5474a2c0fefa9a31dc5936e95806df36fa9a045

--- a/puppet/modules/runtime_project/templates/jenkins_job_builder/config/flake8.yaml.erb
+++ b/puppet/modules/runtime_project/templates/jenkins_job_builder/config/flake8.yaml.erb
@@ -8,7 +8,7 @@
 
    scm:
     - git:
-       url: '/var/lib/zuul/git/{git_project}'
+       url: '${{ZUUL_URL}}/${{ZUUL_PROJECT}}'
        branches:
         - '${{ZUUL_COMMIT}}'
        refspec: '${{ZUUL_REF}}'
