Gerrit v2.8 vhost compatibility
- Adding new properties needed for the v2.8 of gerrit

Change-Id: I876c6e72108f913f586571ec54b784014dc3cc86

--- a/puppet/modules/cdk_project/templates/gerrit.ipv4.vhost.erb
+++ b/puppet/modules/cdk_project/templates/gerrit.ipv4.vhost.erb
@@ -31,7 +31,7 @@
 <VirtualHost _default_:443>
   ServerName <%= scope.lookupvar("cdk_project::gerrit::ip_vhost_name") %>
   ServerAdmin <%= scope.lookupvar("gerrit_config::serveradmin") %>
-
+  AllowEncodedSlashes NoDecode
   ErrorLog ${APACHE_LOG_DIR}/gerrit-ssl-error.log
 
   LogLevel warn
@@ -71,7 +71,7 @@
 <% if scope.lookupvar("gerrit_config::robots_txt_source") != "" -%>
   RewriteCond %{REQUEST_URI} !^/robots.txt$
 <% end -%>
-  RewriteRule ^/(.*)$ http://localhost:8081/$1 [P]
+  RewriteRule ^/(.*)$ http://localhost:8081/$1 [NE,P]
 
   ProxyPassReverse / http://localhost:8081/
 
