Adding ci build status to gerrit header
- This new status menus will be shown right next to the
  code-review status box.

Change-Id: I5f1d28d6efc7864c603051408144f438f7e8991b

--- a/puppet/modules/runtime_project/files/gerrit/GerritSite.css
+++ b/puppet/modules/runtime_project/files/gerrit/GerritSite.css
@@ -44,4 +44,29 @@ a.gwt-InlineHyperlink {background: none !important}
 .result_LOST {
     color: #e39f00;
 }
-ul {list-style-type: none; }
+li.comment_test {list-style-type: none; }
+
+/* this is for support of 'Display Person Name In Review Category' */
+.cAPPROVAL {
+    max-width: 100px;
+    overflow: hidden;
+}
+/* fixes to make this like old gerrit */
+.changeTable td.dataCell {
+    height: 1em;
+}
+
+/* don't make the non voting stand out more than the voting */
+table.infoTable td.notVotable,
+.changeTable td.dataCell.labelNotApplicable {
+    background: inherit;
+}
+
+.addMemberTextBox {
+    width: 20em;
+}
+
+/* css attribute selector to make -1s show up red in new screen */
+[title="This patch needs further work before it can be merged"] {
+    color: red;
+}
