US #7310 : Email delivery failures
Change-Id: I80eec0e20ab89f730bf92dda6a1d565ba7380b08

--- a/puppet/modules/exim_config/templates/exim4.conf.erb
+++ b/puppet/modules/exim_config/templates/exim4.conf.erb
@@ -365,6 +365,10 @@ acl_check_rcpt:
 
   # Accept if the source is local SMTP (i.e. not over TCP/IP). We do this by
   # testing for an empty sending host field.
+<% if mailman_domains.length > 0 -%>
+  deny    recipients = <%= mailman_domains.join(":") %>
+          message    = Blocked local recipient
+<% end -%>
 
   accept  hosts = :
           control = dkim_disable_verify
